@@ -103,7 +103,7 @@ class GnomeAboutSample
   <Attributes />
   <Members>
     <Member MemberName="Construct">
-      <MemberSignature Language="C#" Value="public void Construct (string name, string version, string copyright, string comments, string authors, string documenters, string translator_credits, Gdk.Pixbuf logo_pixbuf);" />
+      <MemberSignature Language="C#" Value="public void Construct (string name, string version, string copyright, string comments, string [] authors, string [] documenters, string translator_credits, Gdk.Pixbuf logo_pixbuf);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -113,21 +113,21 @@ class GnomeAboutSample
         <Parameter Name="version" Type="System.String" />
         <Parameter Name="copyright" Type="System.String" />
         <Parameter Name="comments" Type="System.String" />
-        <Parameter Name="authors" Type="System.String" />
-        <Parameter Name="documenters" Type="System.String" />
+        <Parameter Name="authors" Type="System.String[]" />
+        <Parameter Name="documenters" Type="System.String[]" />
         <Parameter Name="translator_credits" Type="System.String" />
         <Parameter Name="logo_pixbuf" Type="Gdk.Pixbuf" />
       </Parameters>
       <Docs>
         <summary>Construct a credits box for an <see cref="T:Gnome.Application" />.</summary>
-        <param name="name">an object of type <see cref="T:System.String" /></param>
-        <param name="version">an object of type <see cref="T:System.String" /></param>
-        <param name="copyright">an object of type <see cref="T:System.String" /></param>
-        <param name="comments">an object of type <see cref="T:System.String" /></param>
-        <param name="authors">an object of type <see cref="T:System.String" /></param>
-        <param name="documenters">an object of type <see cref="T:System.String" /></param>
-        <param name="translator_credits">an object of type <see cref="T:System.String" /></param>
-        <param name="logo_pixbuf">an object of type <see cref="T:Gdk.Pixbuf" /></param>
+        <param name="name">a <see cref="T:System.String" /></param>
+        <param name="version">a <see cref="T:System.String" /></param>
+        <param name="copyright">a <see cref="T:System.String" /></param>
+        <param name="comments">a <see cref="T:System.String" /></param>
+        <param name="authors">a <see cref="T:System.String" /></param>
+        <param name="documenters">a <see cref="T:System.String" /></param>
+        <param name="translator_credits">a <see cref="T:System.String" /></param>
+        <param name="logo_pixbuf">a <see cref="T:Gdk.Pixbuf" /></param>
         <remarks>The <paramref name="authors" /> array cannot be empty.</remarks>
       </Docs>
     </Member>
