@@ -1,0 +1,37 @@
+// Gnome.About.custom - Gnome About class customizations
+//
+// Author: Mike Kestner <mkestner@novell.com>
+//
+// Copyright (C) 2005 Novell, Inc.
+//
+// This code is inserted after the automatically generated code.
+//
+//
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of version 2 of the Lesser GNU General 
+// Public License as published by the Free Software Foundation.
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+// Lesser General Public License for more details.
+//
+// You should have received a copy of the GNU Lesser General Public
+// License along with this program; if not, write to the
+// Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+// Boston, MA 02111-1307, USA.
+	
+	
+		[DllImport("gnomeui-2")]
+		static extern IntPtr gnome_about_new(string name, string version, string copyright, string comments, string[] authors, string[] documenters, string translator_credits, IntPtr logo_pixbuf);
+
+		public About (string name, string version, string copyright, string comments, string[] authors, string[] documenters, string translator_credits, Gdk.Pixbuf logo_pixbuf) : base (IntPtr.Zero)
+		{
+			if (GetType () != typeof (About)) {
+				CreateNativeObject (new string[0], new GLib.Value[0]);
+				Construct (name, version, copyright, comments, authors, documenters,translator_credits, logo_pixbuf);
+				return;
+			}
+			Raw = gnome_about_new (name, version, copyright, comments, authors, documenters, translator_credits, (logo_pixbuf != null) ? logo_pixbuf.Handle : IntPtr.Zero);
+		}
+
