@@ -21,9 +21,10 @@
   <attr path="/api/namespace/class[@cname='GnomePrint_']/method/*/*[@name='data']" name="type">const-guchar</attr>
   <attr path="/api/namespace/class[@cname='GnomePrint_']/method/*/*[@name='data']" name="array">1</attr>
   <attr path="/api/namespace/class[@cname='GnomeThumbnail_']/method[@name='ScaleDownPixbuf']/return-type" name="owned">true</attr>
-  <attr path="/api/namespace/object[@cname='GnomeAbout']/constructor[@cname='gnome_about_new']/*/*[@type='const-gchar**']" name="array">1</attr>
-  <attr path="/api/namespace/object[@cname='GnomeAbout']/constructor[@cname='gnome_about_new']/*/*[@name='logo_pixbuf']" name="null_ok">1</attr>
-  <attr path="/api/namespace/object[@cname='GnomeAbout']/constructor[@cname='gnome_about_new']/*/*[@name='logo_pixbuf']" name="property_name">logo</attr>
+  <attr path="/api/namespace/object[@cname='GnomeAbout']" name="disable_void_ctor">1</attr>
+  <attr path="/api/namespace/object[@cname='GnomeAbout']/constructor[@cname='gnome_about_new']" name="hidden">1</attr>
+  <attr path="/api/namespace/object[@cname='GnomeAbout']/method[@name='Construct']/*/*[@type='const-gchar**']" name="array">1</attr>
+  <attr path="/api/namespace/object[@cname='GnomeAbout']/method[@name='Construct']/*/*[@name='logo_pixbuf']" name="null_ok">1</attr>
   <attr path="/api/namespace/object[@cname='GnomeAppBar']/signal[@name='ClearPrompt']" name="name">PromptCleared</attr>
   <attr path="/api/namespace/object[@cname='GnomeCanvas']/method[@name='C2w']/*/*[@type='double*']" name="pass_as">out</attr>
   <attr path="/api/namespace/object[@cname='GnomeCanvas']/method[@name='GetButtPoints']/*/*[@type='double*']" name="pass_as">out</attr>
