@@ -1,7 +1,15 @@
 2005-01-25  Mike Kestner  <mkestner@novell.com>
 
+	* gnome/About.custom : implement a subclassable ctor.
+	* gnome/Gnome.metadata : hide About ctor, fix About.Construct parms.
+	* gnome/Makefile.am : add the new custom.
+	[Fixes #71271]
+
+2005-01-25  Mike Kestner  <mkestner@novell.com>
+
 	* gdk/Gdk.metadata : hide all the Pixbuf.SaveTo methods.
 	* gdk/Pixbuf.custom : implement the SaveTo methods.
+	[Fixes #71430]
 
 2005-01-25  Mike Kestner  <mkestner@novell.com>
 
@@ -9,6 +17,7 @@
 	* gtk/Makefile.am : add the new custom.
 	* gtk/Toolbar.custom : implement the SignalFunc methods. Deal with
 	null for Widget params in *Element.
+	[Fixes #71428]
 
 2005-01-24  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
